<resources>
    <string name="app_name">husi</string>
    <string name="app_name_long">husi for Android</string>
    <string name="app_desc">The universal proxy toolchain for Android, written in Kotlin.</string>
    <string name="project">Project</string>
    <string name="github">Source code</string>
    <string name="telegram">Telegram update channel</string>
    <string name="oss_licenses">Open source licenses</string>
    <string name="app_version">Version</string>
    <string name="version_x">Version (%s)</string>
    <string name="logcat">Export debug information</string>
    <string name="menu_configuration">Configuration</string>
    <string name="menu_group">Group</string>
    <string name="menu_about">About</string>
    <string name="theme">Theme</string>
    <string name="themes_amber">Pine Tears</string>
    <string name="themes_black">Traces in Snow</string>
    <string name="themes_blue">Misty Rain</string>
    <string name="themes_blue_grey">Humble Weave</string>
    <string name="themes_brown">Steadfast Earth</string>
    <string name="themes_cyan">Willow Jade</string>
    <string name="themes_deep_orange">Molten Dusk</string>
    <string name="themes_deep_purple">Violet Peak</string>
    <string name="themes_dynamic">Whatever I like</string>
    <string name="themes_green">Verdant Guqin</string>
    <string name="themes_grey">Dustless Void</string>
    <string name="themes_indigo">Astral Tide</string>
    <string name="themes_light_blue">Azure Mirror</string>
    <string name="themes_light_green">Distant Verdure</string>
    <string name="themes_lime">Gazing Yellow Duck</string>
    <string name="themes_orange">Rising Dawn</string>
    <string name="themes_pink">Drunken Sands</string>
    <string name="themes_pink_ssr">Sakura Drift</string>
    <string name="themes_purple">Violet Breeze</string>
    <string name="themes_red">Crimson Valor</string>
    <string name="themes_teal">Gentle Luster</string>
    <string name="themes_yellow">Radiant Path</string>
    <string name="document">Document</string>
    <string name="group_default">Ungrouped</string>
    <string name="quick_toggle">Toggle</string>
    <string name="tile_title">Switcher</string>
    <string name="menu_traffic">Traffic</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="action_copy">Copy</string>
    <string name="action_open">Open</string>
    <string name="group_name">Group name</string>
    <string name="group_update">Update</string>
    <string name="group_subscription_link">Subscription Link</string>
    <string name="group_name_required">Group name required</string>
    <string name="group_create">Create group</string>
    <string name="group_create_subscription">Create subscription</string>
    <string name="update_all_subscription">Update all subscriptions</string>
    <string name="group_edit">Edit group</string>
    <string name="group_edit_subscription">Edit subscription</string>
    <string name="group_status_empty">Empty group</string>
    <string name="group_status_empty_subscription">Not updated yet</string>
    <string name="group_status_proxies">%d Proxies</string>
    <string name="group_status_proxies_subscription">%1$d Proxies | Updated on %2$s</string>
    <string name="group_no_difference">%s: No difference</string>
    <string name="group_updated">%1$s: Updated %2$d proxies</string>
    <string name="group_show_diff">Diff</string>
    <string name="group_diff">Diff (%s)</string>
    <string name="group_delete_confirm_prompt">Are you sure you want to remove this group?</string>
    <string name="group_added">Added: \n%s</string>
    <string name="group_changed">Updated: \n%s</string>
    <string name="group_deleted">Deleted: \n%s</string>
    <string name="group_duplicate">Duplicate: \n%s</string>
    <string name="service_mode">Service Mode</string>
    <string name="service_mode_proxy">Proxy only</string>
    <string name="service_mode_vpn" translatable="false">VPN</string>
    <string name="port_proxy">Proxy Port</string>
    <string name="allow_access">Allow Connections from the LAN</string>
    <string name="allow_access_sum">Bind inbound servers to 0.0.0.0</string>
    <string name="inbound_settings">Inbound Settings</string>
    <string name="general_settings">App Settings</string>
    <string name="cag_ws">WebSocket Settings</string>
    <string name="ws_max_early_data" translatable="false">Max early data</string>
    <string name="ws_browser_forwarding">Browser Forwarding</string>
    <string name="ws_browser_forwarding_sum">Forward corresponding WebSockets through the browser.
    </string>
    <string name="speed_interval">Speed Notification Update Interval</string>
    <string name="cag_misc">Misc Settings</string>
    <string name="show_stop">Show Stop Button</string>
    <string name="show_stop_sum">If you don’t want to use Quick Tile as the switch</string>
    <string name="show_direct_speed">Show Direct Speed</string>
    <string name="show_direct_speed_sum">Show the traffic speed without proxy in the notification as
        well
    </string>
    <string name="security_settings">TLS Security Settings</string>
    <string name="allow_insecure">Allow Insecure</string>
    <string name="allow_insecure_sum">Disable certificate checking. When enabled, this configuration
        is as secure as plaintext
    </string>
    <string name="traffic" translatable="false">%1$s↑ %2$s↓</string>
    <string name="speed_detail">Proxy： %1$s↑ %2$s↓\nDirect： %3$s↑ %4$s↓</string>
    <string name="speed">%s/s</string>
    <string name="connection_test_testing">Testing…</string>
    <string name="connection_test_available">Success: HTTPS handshake took %dms</string>
    <string name="connection_test_available_http">Success: HTTP handshake took %dms</string>
    <string name="connection_test_error">Failed: %s</string>
    <string name="connection_test_fail">Internet Unavailable</string>
    <string name="connection_test_error_status_code">Error code: #%d</string>
    <string name="connection_test_mux">Server not supported this multiplex protocol</string>
    <string name="cag_dns">DNS Settings</string>
    <string name="remote_dns">Remote DNS</string>
    <string name="direct_dns">Direct DNS</string>
    <string name="enable_fakedns">Enable FakeDNS</string>
    <string name="fakedns_message">May cause other applications need to be restarted to reconnect to
        the network after proxy stopped
    </string>
    <string name="dns_hosts">Domain rewrite</string>
    <string name="port_local_dns">Local DNS Port</string>
    <string name="dns_only">DNS Only</string>
    <string name="connection_test_url">Connection Test URL</string>
    <string name="profile_name">Profile Name</string>
    <string name="server_address">Server</string>
    <string name="server_port">Remote Port</string>
    <string name="username">Username</string>
    <string name="username_opt">Username (Optional)</string>
    <string name="password_opt">Password (Optional)</string>
    <string name="key_opt">Key (Optional)</string>
    <string name="password">Password</string>
    <string name="enc_method">Encrypt Method</string>
    <string name="protocol">Protocol</string>
    <string name="protocol_param">Protocol Param</string>
    <string name="obfs">Obfs</string>
    <string name="obfs_param">Obfs Param</string>
    <string name="uuid">User ID</string>
    <string name="alter_id">Alter ID</string>
    <string name="security">Transport layer encryption</string>
    <string name="network">Network</string>
    <string name="header_type">Header Type</string>
    <string name="ws_host">WebSocket Host</string>
    <string name="ws_path">WebSocket Path</string>
    <string name="http_host">HTTP Host</string>
    <string name="http_path">HTTP Path</string>
    <string name="grpc_service_name">gRPC ServiceName</string>
    <string name="tls">Use TLS</string>
    <string name="sni">Server Name Indication</string>
    <string name="alpn">Application-Layer Protocol Negotiation</string>
    <string name="certificates">Certificates</string>
    <string name="early_data_header_name">Early Data Header Name</string>
    <string name="encryption">Encryption</string>
    <string name="extra_headers">Extra Headers</string>
    <string name="config_type">Config Type</string>
    <string name="edit_config">Edit Config</string>
    <string name="metered">Metered Hint</string>
    <string name="metered_summary">Hint system to treat VPN as metered</string>
    <string name="menu_route">Route</string>
    <string name="route_add">Create Route</string>
    <string name="delete_route_prompt">Are you sure you want to remove this route?</string>
    <string name="route_name">Route Name</string>
    <string name="route_proxy">Proxy</string>
    <string name="route_bypass">Bypass</string>
    <string name="route_block">Block</string>
    <string name="route_profile">Select Profile…</string>
    <string name="empty_route">Empty Route</string>
    <string name="enable_mux">Enable Multiplexer</string>
    <string name="mux_sum">Mux is designed to reduce connecting handshake latency, not to increase connection throughput. Using Mux to watch videos, download or speed test is usually counter productive. If the server does not support it, you will not be able to access the Internet.</string>
    <string name="settings">Settings</string>
    <string name="custom_config">Custom Config</string>
    <string name="action_import_file">Import from file</string>
    <string name="plugin">Plugin</string>
    <string name="plugin_configure">Configure…</string>
    <string name="proxy_cat">Server Settings</string>
    <string name="enable">Enable</string>
    <string name="experimental_settings">Experimental</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_log">Logs</string>
    <string name="packet_encoding">Packet Encoding</string>
    <string name="tuic_disable_sni">Disable SNI</string>
    <string name="utls_fingerprint">uTLS fingerprint</string>
    <string name="is_outbound_only">The JSON set is outbound</string>
    <string name="protocol_version">Protocol Version</string>
    <string name="tls_camouflage_settings">TLS Camouflage Settings</string>
    <string name="mux_type">Mux protocol</string>
    <string name="ech_config">ECH configuration</string>
    <string name="assets_update">Update geo assets</string>
    <string name="mux_preference">Multiplex Settings</string>
    <string name="enable_brutal">Enable TCP Brutal congestion controller</string>
    <string name="authenticated_length">Authenticated length</string>
    <string name="experimental_authenticated_length">Make the length of each payload segment no longer malleable. This experiment requires the server and client use the same version of v2ray-core. More breaking updates on this experiment is expected.</string>
    <string name="padding">Padding</string>
    <string name="mux_strategy">Mux Strategy</string>
    <string name="mux_number">Mux Number</string>
    <string name="override_address">Override Address</string>
    <string name="override_port">Override Port</string>
    <string name="reality_public_key">REALITY Public Key</string>
    <string name="reality_short_id" translatable="false">REALITY Short ID</string>
    <string name="ech" translatable="false">ECH</string>
    <string name="v2ray_transport">V2Ray Transport</string>
    <string name="http_headers" translatable="false">HTTP Headers</string>
    <string name="idle_session_check_interval">IDLE Session Check Interval</string>
    <string name="idle_session_timeout">IDLE Session Timeout</string>
    <string name="min_idle_session">Mininum IDLE Session</string>
    <string name="tls_fragment">TLS Fragment</string>
    <string name="tls_fragment_fallback_delay">TLS Fragment Fallback Delay</string>
    <string name="tls_record_fragment">TLS Record Fragment</string>
    <string name="import_url">Import URL</string>
</resources>