<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        app:icon="@drawable/ic_social_emoji_symbols"
        app:key="profileName"
        app:title="@string/profile_name"
        app:useSimpleSummaryProvider="true" />

    <PreferenceCategory app:title="@string/proxy_cat">

        <EditTextPreference
            app:icon="@drawable/ic_hardware_router"
            app:key="serverAddress"
            app:title="@string/server_address"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_maps_directions_boat"
            app:key="serverPort"
            app:title="@string/server_port"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_baseline_person_24"
            app:key="serverUsername"
            app:title="@string/username_opt"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_settings_password"
            app:key="serverPassword"
            app:title="@string/password_opt" />
        <EditTextPreference
            app:icon="@drawable/ic_baseline_person_24"
            app:key="serverUserID"
            app:title="@string/uuid" />
        <EditTextPreference
            app:icon="@drawable/ic_maps_360"
            app:key="serverAlterID"
            app:title="@string/alter_id"
            app:useSimpleSummaryProvider="true" />
        <!-- Also VLESS flow -->
        <rikka.preference.SimpleMenuPreference
            app:entries="@array/vmess_encryption_value"
            app:entryValues="@array/vmess_encryption_value"
            app:icon="@drawable/ic_notification_enhanced_encryption"
            app:key="serverEncryption"
            app:title="@string/encryption"
            app:useSimpleSummaryProvider="true" />
        <rikka.preference.SimpleMenuPreference
            app:entries="@array/packet_encoding_entry"
            app:entryValues="@array/int_array_3"
            app:icon="@drawable/baseline_widgets_24"
            app:key="serverPacketEncoding"
            app:title="@string/packet_encoding"
            app:useSimpleSummaryProvider="true" />
        <rikka.preference.SimpleMenuPreference
            app:entries="@array/networks_value"
            app:entryValues="@array/networks_value"
            app:icon="@drawable/ic_baseline_compare_arrows_24"
            app:key="serverV2rayTransport"
            app:title="@string/v2ray_transport"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_baseline_airplanemode_active_24"
            app:key="serverHost"
            app:title="@string/http_host"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_baseline_format_align_left_24"
            app:key="serverPath"
            app:title="@string/http_path"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_baseline_import_contacts_24"
            app:key="serverHeaders"
            app:title="@string/http_headers"
            app:useSimpleSummaryProvider="true" />
        <rikka.preference.SimpleMenuPreference
            app:entries="@array/transport_layer_encryption_value"
            app:entryValues="@array/transport_layer_encryption_value"
            app:icon="@drawable/ic_baseline_layers_24"
            app:key="serverSecurity"
            app:title="@string/security"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        app:key="serverWsCategory"
        app:title="@string/cag_ws">
        <EditTextPreference
            app:defaultValue="0"
            app:icon="@drawable/ic_baseline_compare_arrows_24"
            app:key="serverWsMaxEarlyData"
            app:title="@string/ws_max_early_data"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:icon="@drawable/ic_baseline_stream_24"
            app:key="serverWsEarlyDataHeaderName"
            app:title="@string/early_data_header_name"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        app:key="serverSecurityCategory"
        app:title="@string/security_settings">
        <EditTextPreference
            app:icon="@drawable/ic_action_copyright"
            app:key="serverSNI"
            app:title="@string/sni"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_baseline_legend_toggle_24"
            app:key="serverALPN"
            app:title="@string/alpn"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_baseline_vpn_key_24"
            app:key="serverCertificates"
            app:title="@string/certificates"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            app:icon="@drawable/ic_notification_enhanced_encryption"
            app:key="serverAllowInsecure"
            app:summary="@string/allow_insecure_sum"
            app:title="@string/allow_insecure" />
    </PreferenceCategory>

    <PreferenceCategory
        app:key="serverTlsCamouflageCategory"
        app:title="@string/tls_camouflage_settings">
        <rikka.preference.SimpleMenuPreference
            app:defaultValue=""
            app:entries="@array/utls_fingerprint_entry"
            app:entryValues="@array/utls_fingerprint_entry"
            app:icon="@drawable/ic_baseline_fingerprint_24"
            app:key="serverUtlsFingerprint"
            app:title="@string/utls_fingerprint"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_baseline_vpn_key_24"
            app:key="serverRealityPublicKey"
            app:title="@string/reality_public_key"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_baseline_texture_24"
            app:key="serverRealityShortID"
            app:title="@string/reality_short_id"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        app:key="serverMuxCategory"
        app:title="@string/mux_preference">
        <SwitchPreference
            app:icon="@drawable/ic_baseline_compare_arrows_24"
            app:key="serverMux"
            app:summary="@string/mux_sum"
            app:title="@string/enable_mux" />
        <SwitchPreference
            app:icon="@drawable/ic_baseline_bolt"
            app:key="serverBrutal"
            app:title="@string/enable_brutal" />
        <rikka.preference.SimpleMenuPreference
            app:defaultValue="0"
            app:entries="@array/mux_types"
            app:entryValues="@array/int_array_3"
            app:key="serverMuxType"
            app:title="@string/mux_type"
            app:useSimpleSummaryProvider="true" />
        <rikka.preference.SimpleMenuPreference
            app:defaultValue="0"
            app:entries="@array/mux_strategies"
            app:entryValues="@array/int_array_3"
            app:key="serverMuxStrategy"
            app:title="@string/mux_strategy"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:defaultValue="8"
            app:icon="@drawable/ic_baseline_low_priority_24"
            app:key="serverMuxNumber"
            app:title="@string/mux_number"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            app:icon="@drawable/baseline_developer_board_24"
            app:key="serverMuxPadding"
            app:title="@string/padding" />
    </PreferenceCategory>

    <PreferenceCategory
        app:key="serverEchCategory"
        app:title="@string/ech">
        <SwitchPreference
            app:icon="@drawable/ic_baseline_security_24"
            app:key="serverECH"
            app:title="@string/enable" />
        <EditTextPreference
            app:icon="@drawable/ic_baseline_nfc_24"
            app:key="serverECHConfig"
            app:title="@string/ech_config"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@drawable/ic_baseline_grid_3x3_24"
        app:key="serverVMessExperimentsCategory"
        app:title="@string/experimental_settings">
        <SwitchPreference
            app:key="serverAuthenticatedLength"
            app:summary="@string/experimental_authenticated_length"
            app:title="@string/authenticated_length" />
    </PreferenceCategory>
</PreferenceScreen>