<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditTextPreference
        app:icon="@drawable/ic_social_emoji_symbols"
        app:key="profileName"
        app:title="@string/profile_name"
        app:useSimpleSummaryProvider="true" />

    <PreferenceCategory app:title="@string/proxy_cat">
        <EditTextPreference
            app:icon="@drawable/ic_hardware_router"
            app:key="serverAddress"
            app:title="@string/server_address"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_maps_directions_boat"
            app:key="serverPort"
            app:title="@string/server_port"
            app:useSimpleSummaryProvider="true" />
        <rikka.preference.SimpleMenuPreference
            app:defaultValue="3"
            app:entries="@array/shadowtls_version_value"
            app:entryValues="@array/shadowtls_version_value"
            app:icon="@drawable/ic_baseline_update_24"
            app:key="protocolVersion"
            app:title="@string/protocol_version"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:dialogLayout="@layout/layout_password_dialog"
            app:icon="@drawable/ic_notification_enhanced_encryption"
            app:key="serverPassword"
            app:title="@string/password" />
    </PreferenceCategory>

    <PreferenceCategory
        app:key="serverSecurityCategory"
        app:title="@string/security_settings">
        <EditTextPreference
            app:icon="@drawable/ic_action_copyright"
            app:key="serverSNI"
            app:title="@string/sni"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_baseline_legend_toggle_24"
            app:key="serverAlpn"
            app:title="@string/alpn"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_baseline_vpn_key_24"
            app:key="serverCertificates"
            app:title="@string/certificates"
            app:useSimpleSummaryProvider="true" />
        <io.nekohasekai.sagernet.widget.MaterialSwitchPreference
            app:icon="@drawable/ic_notification_enhanced_encryption"
            app:key="serverAllowInsecure"
            app:summary="@string/allow_insecure_sum"
            app:title="@string/allow_insecure" />
        <rikka.preference.SimpleMenuPreference
            app:defaultValue=""
            app:entries="@array/utls_fingerprint_entry"
            app:entryValues="@array/utls_fingerprint_entry"
            app:icon="@drawable/ic_baseline_fingerprint_24"
            app:key="serverUtlsFingerprint"
            app:title="@string/utls_fingerprint"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</PreferenceScreen>
