<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_configuration"
                android:icon="@drawable/description"
                android:title="@string/menu_configuration"/>

        <item
                android:id="@+id/nav_group"
                android:icon="@drawable/view_list"
                android:title="@string/menu_group"/>

        <item
                android:id="@+id/nav_route"
                android:icon="@drawable/directions"
                android:title="@string/menu_route"/>

        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/settings"
                android:title="@string/settings"/>
    </group>

    <group
            android:id="@+id/misc"
            android:checkableBehavior="single">
        <item
                android:id="@+id/nav_logcat"
                android:icon="@drawable/bug_report"
                android:title="@string/menu_log"/>
        <item
                android:id="@+id/nav_traffic"
                android:icon="@drawable/transform"
                android:title="@string/menu_dashboard"/>
        <item
                android:id="@+id/nav_tools"
                android:icon="@drawable/construction"
                android:title="@string/menu_tools"/>
    </group>

    <group
            android:id="@+id/about"
            android:checkableBehavior="single">
        <item
                android:id="@+id/nav_faq"
                android:icon="@drawable/data_usage"
                android:title="@string/document"/>
        <item
                android:id="@+id/nav_about"
                android:icon="@drawable/info"
                android:title="@string/menu_about"/>
    </group>

</menu>