<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_update_all"
        android:icon="@drawable/ic_baseline_update_24"
        android:title="@string/assets_update"
        app:showAsAction="always" />
    <item
        android:icon="@drawable/ic_action_note_add"
        android:title="@string/import_asset"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_import_file"
                android:title="@string/action_import_file" />
            <item
                android:id="@+id/action_import_url"
                android:title="@string/import_url" />
        </menu>
    </item>
</menu>